--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5325,3 +5325,39 @@ For example:
     ✅ "hey, if you're not busy, could you update those NFRs?"
     ✅ etc.
 
+---
+
+[Before you buy a domain name, first check to see if it's haunted  Bryan Braun - Frontend Developer](https://www.bryanbraun.com/2024/10/25/before-you-buy-a-domain-name-first-check-to-see-if-its-haunted/)
+
+- [도메인 이름 구매 전, 유령인지 여부 확인 필요  GeekNews](https://news.hada.io/topic?id=17436)
+
+- 2022년 중반, musicbox.fun이라는 새로운 도메인 이름을 구매함. 그러나 이 도메인은 과거에 불법 음악을 호스팅했던 이력이 있었음.
+- 2018년부터 2021년까지 musicbox.fun은 수천 건의 저작권 침해 신고를 받았으며, 20,000개 이상의 URL이 검색 엔진에서 삭제됨. 이로 인해 도메인의 평판이 나빠져 검색 엔진에서의 순위가 떨어짐.
+- 도메인 이름이 "유령이 씌었다"는 표현은 과거의 나쁜 평판이 검색 엔진에 영향을 미쳐 새로운 소유자가 검색 결과에서 순위를 올리기 어렵게 만드는 상황임
+
+몇 가지 방법으로 도메인 이름 히스토리를 미리 확인해볼 수 있는데
+
+- Google 투명성 보고서(Google Transparency Report)와 lumendatabase.org에서 도메인에 대한 저작권 불만을 검색할 수 있음.
+- ahrefs.com과 같은 고급 SEO 도구를 사용하여 백링크, 순위 역사, 트래픽 및 도메인 권한에 대한 정보를 얻을 수 있음.
+
+---
+
+[AI 붐이 .ai 도메인을 가진 작은 섬나라 Anguilla에 횡재를 안겨주다  GeekNews](https://news.hada.io/topic?id=13157)
+
+- [Why the AI Boom is a Windfall for Tiny Anguilla - IEEE Spectrum](https://spectrum.ieee.org/ai-domains)
+
+서인도 제도(카리브해)에 있는 섬나라 앵귈라는 .ai 웹사이트 등록으로 월 수백만달러의 수익을 올리는 중
+
+- 영국의 해외 영토. 인구 약 1만5천명
+- 1980년대 후반에 IANA가 국가와 지역에 고유한 2문자 도메인을 할당하면서 .ai 도메인을 받고, 우여곡절 끝에 정부가 관리하게 됨
+- ChatGPT가 나온후 5개월간 매출이 4배 증가 후 계속 유지하고 있으며, 이미 정부 예산의 1/3 정도를 차지함
+
+---
+
+[Introducing Randflake ID a distributed, uniform, unpredictable, unique random ID generator.](https://gosuda.org/randflake)
+
+- [GitHub - gosudarandflake Randflake ID a distributed, uniform, unpredictable, unique random ID generator.](https://github.com/gosuda/randflake)
+
+facebook 의 snowflake 난수 생성 알고리즘에서 난독화를 추가. 예측할 수 없는 난수를 생성한다고 한다.
+
+
