--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5360,4 +5360,20 @@ For example:
 
 facebook 의 snowflake 난수 생성 알고리즘에서 난독화를 추가. 예측할 수 없는 난수를 생성한다고 한다.
 
+## 24.12.23
 
+[사용자 제작 콘텐츠 - Play Console 고객센터](https://support.google.com/googleplay/android-developer/answer/9876937?sjid=17649804521553614925-AP)
+
+Google, Apple 플랫폼에서 사용자 제작 컨텐츠 UGC(User Generated Content) 에 대한 정책
+
+- 채팅 등의 기능을 포함하는 애플리케이션이라면 참고해야 한다.
+
+    Google Play 개발자 프로그램 정책을 준수하는 방식으로 불쾌감을 주는 콘텐츠와 행동을 규정하고, 앱의 이용약관 또는 사용자 정책을 통해 해당 콘텐츠와 행동을 금지해야 합니다.
+
+        앱을 통해 호스팅되는 UGC의 유형에 부합하는 합리적인 방식으로 UGC 검토를 진행합니다. 여기에는 불쾌감을 주는 UGC 및 사용자를 신고 및 차단하고 적절한 경우 UGC나 사용자에 대한 조치를 취하기 위한 인앱 시스템이 포함됩니다. 각각의 UGC 경험에 따라 검토의 유형이 달라질 수 있습니다. 예를 들면 다음과 같습니다.
+
+        사용자 확인 또는 오프라인 등록(예: 특정 학교나 기업 내에서만 사용되는 앱)과 같은 수단을 통해 특정 사용자를 식별할 수 있는 UGC 앱은 반드시 콘텐츠 및 사용자를 신고할 수 있는 인앱 기능을 제공해야 합니다.
+
+        특정 사용자와의 1:1 상호작용을 제공하는 UGC 기능(예: 채팅 메시지, 태그, 멘션 등)은 반드시 사용자를 차단하는 인앱 기능을 제공해야 합니다.
+
+        소셜 네트워킹 앱이나 블로그 앱과 같이 공개적으로 액세스할 수 있는 UGC에 대한 액세스를 제공하는 앱은 반드시 사용자 및 콘텐츠 신고와 사용자 차단을 위한 인앱 기능을 구현해야 합니다
