--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5377,3 +5377,33 @@ Google, Apple 플랫폼에서 사용자 제작 컨텐츠 UGC(User Generated Cont
         특정 사용자와의 1:1 상호작용을 제공하는 UGC 기능(예: 채팅 메시지, 태그, 멘션 등)은 반드시 사용자를 차단하는 인앱 기능을 제공해야 합니다.
 
         소셜 네트워킹 앱이나 블로그 앱과 같이 공개적으로 액세스할 수 있는 UGC에 대한 액세스를 제공하는 앱은 반드시 사용자 및 콘텐츠 신고와 사용자 차단을 위한 인앱 기능을 구현해야 합니다
+
+## 24.12.26
+
+[What is Processor Affinity & how to set Processor Affinity on Windows 11](https://www.thewindowsclub.com/processor-affinity-windows)
+
+> **Processor Affinity** also called CPU pinning, allows the **user to assign a process to use only a few cores.** Technically you can bind and unbind a process or thread to CPU or CPUs which here can be termed as CPU cores. But the real question is why is such an option available, and is there an advantage of setting processor affinity.
+>
+> **Processor Affinity is useful if you have a heavy program like video rendering.** When you dedicated a core for the video editing program, it ensures that the core of the processor is always dedicated to the task. It improves performance because it reduces reduce cache problems as there is no delay with a dedicated core.
+
+- [CPU Affinity 적용하기 - sarc.io](https://sarc.io/index.php/os/2193-cpu-affinity)
+
+- 실행중인 프로세스나 프로그램을 특정 CPU core에 bind시켜주는 OS 기능이 있다. 
+- Cache Binding 작업이 많은 프로그램을 실행시킬 때 **각각의 CPU를 분리하여 할당**함으로써 **CPU의 Cache Miss를 줄일 수도 있다고 한다.**
+
+컨테스트 스위칭이 발생할 때, CPU Core의 Private Cache(L1, L2) 가 휘발되어버린다면 성능 손해로 이어질 가능성이 있음. 만약 손실 정도가 무시할 수 없을 정도가 된다면 CPU Affinity 설정이 다음 선택지로 고려해볼만 하다.
+
+멀티스레딩이 오히려 싱글스레드보다 성능이 떨어진다면 이런 배경이 원인이 될 수 있다.
+
+---
+
+[System on a chip - Wikipedia](https://en.wikipedia.org/wiki/System_on_a_chip)
+
+- SoC
+- [ARM big.LITTLE - Wikipedia](https://en.wikipedia.org/wiki/ARM_big.LITTLE)
+
+> ARM big.LITTLE is a heterogeneous computing architecture developed by Arm Holdings, coupling relatively battery-saving and slower processor cores (LITTLE) with relatively more powerful and power-hungry ones (big). The intention is to create a multi-core processor that can adjust better to dynamic computing needs and use less power than clock scaling alone. ARM's marketing material promises up to a 75% savings in power usage for some activities.[1] Most commonly, ARM big.LITTLE architectures are used to create a multi-processor system-on-chip (MPSoC).
+>
+>For a given library of CMOS logic, active power increases as the logic switches more per second, while leakage increases with the number of transistors. So, CPUs designed to run fast are different from CPUs designed to save power. When a very fast out-of-order CPU is idling at very low speeds, a CPU with much less leakage (fewer transistors) could do the same work. For example, it might use a smaller (fewer transistors) memory cache, or a simpler microarchitecture such as removing out-of-order execution. big.LITTLE is a way to optimize for both cases: Power and speed, in the same system.
+>
+>In practice, a big.LITTLE system can be surprisingly inflexible. One issue is the number and types of power and clock domains that the IC provides. These may not match the standard power management features offered by an operating system. Another is that the CPUs no longer have equivalent abilities, and matching the right software task to the right CPU becomes more difficult. Most of these problems are being solved by making the electronics and software more flexible.
