--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5407,3 +5407,23 @@ Google, Apple 플랫폼에서 사용자 제작 컨텐츠 UGC(User Generated Cont
 >For a given library of CMOS logic, active power increases as the logic switches more per second, while leakage increases with the number of transistors. So, CPUs designed to run fast are different from CPUs designed to save power. When a very fast out-of-order CPU is idling at very low speeds, a CPU with much less leakage (fewer transistors) could do the same work. For example, it might use a smaller (fewer transistors) memory cache, or a simpler microarchitecture such as removing out-of-order execution. big.LITTLE is a way to optimize for both cases: Power and speed, in the same system.
 >
 >In practice, a big.LITTLE system can be surprisingly inflexible. One issue is the number and types of power and clock domains that the IC provides. These may not match the standard power management features offered by an operating system. Another is that the CPUs no longer have equivalent abilities, and matching the right software task to the right CPU becomes more difficult. Most of these problems are being solved by making the electronics and software more flexible.
+
+---
+
+[Apple M1 칩이 뛰어난 성능을 가질 수 있었던 이유](https://velog.io/@embeddedjune/Apple-M1-%EC%B9%A9%EC%9D%B4-%EB%9B%B0%EC%96%B4%EB%82%9C-%EC%84%B1%EB%8A%A5%EC%9D%84-%EA%B0%80%EC%A7%88-%EC%88%98-%EC%9E%88%EC%97%88%EB%8D%98-%EC%9D%B4%EC%9C%A0)
+
+> big.LITTLE은 무겁고 복잡한 프로그램을 돌릴 때는 성능이 좋은 CPU(빅 클러스터)를, 간단한 프로그램을 돌릴 때는 낮은 성능을 가진 CPU(리틀 클러스터)를 사용해 전력 소모 효율을 높이는 기술입니다.
+
+---
+
+나무위키 찾아보니까
+
+갤럭시 S24 CPU 구성
+
++ ARM Cortex-X4 MP1 3.21 GHz
++ ARM Cortex-A720 MP2 2.90 GHz
++ ARM Cortex-A720 MP3 2.59 GHz
++ ARM Cortex-A520 MP4 1.96 GHz
+
+
+
