--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4,3 +4,15 @@
 
 - 게임물관리위원회 ( 줄여서 게등위 ) 에서는 등급 심사를 위해 인 게임 텍스트 추출 요청을 하기도 한다.
 - 이 경우 게임 데이터에서 텍스트 추출 도구가 준비되어야 함.
+
+## 25.01.20
+
+[넥슨 '마비노기', NPC 상점 설정 오류 발생…디렉터 사과](https://www.msn.com/ko-kr/news/other/%EB%84%A5%EC%8A%A8-%EB%A7%88%EB%B9%84%EB%85%B8%EA%B8%B0-npc-%EC%83%81%EC%A0%90-%EC%84%A4%EC%A0%95-%EC%98%A4%EB%A5%98-%EB%B0%9C%EC%83%9D-%EB%94%94%EB%A0%89%ED%84%B0-%EC%82%AC%EA%B3%BC/ar-AA1xucKS?ocid=BingNewsSerp)
+
+    관련 내용은 지난 16일 업데이트로 추가된 고가 아이템 2종인 ‘마력이 깃든 융합제’와 ‘무리아스의 성수 효과 제거 주문서’가 추가되면서 발생한 것으로 조사됐다.
+
+    민 디렉터는 “해당 내용은 NPC 상점에서 구매할 수 있는 아이템 중 높은 가격 혹은 높은 묶음 개수를 가지고 있는 아이템에서 발생했다”며 “구매 가격과 개수로 계산되는 중간값이 42억을 넘어가는 경우, 코드에서 결과 값을 도출하면서 오버플로우가 발생해 부끄럽게도 이번과 같은 문제가 발생하게 됐다”고 설명했다.
+
+    마비노기 측은 디렉터의 공지 전 오류와 관련해 긴급 점검 및 조치 안내를 통해 부당한 이득을 취한 캐릭터에 26명의 게임이용제한을 발표했다. 그러나 마비노기 커뮤니티에서는 이번 오류가 발생하기 전부터 이를 악용한 이용자가 있다는 제보와 함께 적극적인 대응을 요구하기도 했다.
+
+- int32 형 오버플로우가 유발한 돈 복사 버그.
