--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -16,3 +16,29 @@
     마비노기 측은 디렉터의 공지 전 오류와 관련해 긴급 점검 및 조치 안내를 통해 부당한 이득을 취한 캐릭터에 26명의 게임이용제한을 발표했다. 그러나 마비노기 커뮤니티에서는 이번 오류가 발생하기 전부터 이를 악용한 이용자가 있다는 제보와 함께 적극적인 대응을 요구하기도 했다.
 
 - int32 형 오버플로우가 유발한 돈 복사 버그.
+
+---
+
+[Please Don't Force Dark Mode — Vishnu's Pages](https://iamvishnu.com/posts/please-dont-force-dark-mode)
+
+**My Eyes! My Eyes! 😵💫**
+
+    Reading in dark mode doesn’t just mess with my eyes while I’m at it — it sticks around afterward too. 
+    Every time I finish a long article, I end up seeing horizontal stripes everywhere I look, like my eyes just won’t let it go.
+
+**What’s the real problem with the dark mode?**
+
+    The real problem is the contrast ratio between the text and the background when using dark mode.
+
+    For example, pure white text on a pitch black background can strain my eyes and be very difficult to read. The contrast ratio of this combination is 21:1
+
+    However, light gray text on a dark gray background is easy on my eyes.
+    Here the background is #666 and the text is #E0E0E0 which creates a contrast ratio of 4.34:1.
+
+**higher contrast ratios in dark mode cause discomfort for my eyes. But when I say ‘higher’, just how high can it go?**
+
+    The Web Content Accessibility Guidelines (WCAG) version 2.1 recommends a minimum contrast ratio of 4.5:1 for normal texts (SC 1.4.3) but not a maximum.
+    The current guidelines makes pure white text on pitch black background completely accessible, even if the contrast ratio is an unbearable 21:1. 
+    But the more comfortable contrast ratio of 4.34:1 from the above example fails according to the guidelines.
+
+> That means, currently, there are no standards or guidelines that address contrast ratios in dark mode.
