--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -42,3 +42,15 @@
     But the more comfortable contrast ratio of 4.34:1 from the above example fails according to the guidelines.
 
 > That means, currently, there are no standards or guidelines that address contrast ratios in dark mode.
+
+---
+
+[Project Lombok](https://projectlombok.org/#)
+
+- java 의 롬복
+- [Introduction to Project Lombok  Baeldung](https://www.baeldung.com/intro-to-project-lombok)
+
+java 코드 작성 시의 자주 반복되는 코드 boilerplate 지점들을 자동 작성해주는 도구
+
+- getter, setter, constructor, toString, Equal 등등,
+- c# 의 record 개념이 가지는 컴파일러 매직과 비슷하다는 느낌을 받음.
