--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -231,3 +231,60 @@ Workstation GC optimizes for reduced memory consumption, while server GC optimiz
 - [Dynamically Adapting To Application Sizes | by Maoni0 | Medium](https://maoni0.medium.com/dynamically-adapting-to-application-sizes-2d72fcb6f1ea)
 - 만약 중간 타협점을 원한다면 DATAS (Dynamically Adapting To Application Sizes) 방법이 있음.
 
+---
+
+Chat GPT 한테 질문.
+
+### .NET Workstation GC vs Server GC 비교
+
+### 🔹 1. Workstation GC  
+📌 **싱글스레드 환경**(또는 가벼운 멀티스레드 환경)에 최적화됨.  
+📌 **UI 기반 애플리케이션(WPF, WinForms)**에서 사용됨.  
+
+#### **특징**  
+- 기본적으로 **싱글 GC 스레드**만 사용  
+- UI 애플리케이션에서 **응답성을 유지**하는 것이 목표  
+- GC 실행 시 **애플리케이션이 멈추는 시간을 최소화**  
+- 멀티코어 시스템에서도 기본적으로 **하나의 GC 스레드**만 사용  
+
+#### **장점**  
+✅ UI 애플리케이션에서 멈추는 시간이 짧음 → 부드러운 UX  
+✅ 낮은 메모리 사용량  
+
+#### **단점**  
+❌ 멀티코어 서버 환경에서는 성능이 떨어질 수 있음  
+❌ GC 성능이 낮아 대량 객체 할당/해제 시 비효율적  
+
+---
+
+### 🔹 2. Server GC  
+📌 **멀티스레드 환경**(특히 서버 애플리케이션)에 최적화됨.  
+📌 **ASP.NET, .NET Core Web API, 백엔드 서버 프로세스**에서 사용됨.  
+
+#### **특징**  
+- **각 논리적 프로세서(코어)마다 하나의 GC 스레드**를 생성  
+- GC 실행 시 **모든 코어를 활용하여 병렬로 동작**  
+- **더 많은 메모리 힙**을 지원  
+- **스레드 풀을 적극 활용**하여 대량 요청을 빠르게 처리  
+
+#### **장점**  
+✅ GC가 여러 코어를 활용하여 빠르게 실행됨 → **GC 속도가 빠름**  
+✅ **멀티스레드 환경에서 뛰어난 성능**  
+✅ **큰 메모리 힙을 효율적으로 관리**  
+
+#### **단점**  
+❌ 멀티스레드를 활용하기 때문에 **메모리 사용량 증가**  
+❌ GC 실행 시 **CPU 사용량이 순간적으로 높아질 수 있음**  
+
+---
+
+### 🔹 성능 비교  
+
+|                   | **Workstation GC** | **Server GC**           |
+| ---               | ------------------ | ------------------      |
+| **적용 대상**     | 데스크톱 앱, UI 앱 | 서버 앱, 백엔드 API     |
+| **멀티코어 지원** | 제한적             | 코어마다 GC 스레드 할당 |
+| **GC 속도**       | 느림               | 빠름                    |
+| **CPU 활용도**    | 낮음               | 높음                    |
+| **메모리 사용량** | 적음               | 많음                    |
+| **응답성**        | UI 지연 최소화     | 서버 처리량 증가        |
