--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -288,3 +288,16 @@ Chat GPT 한테 질문.
 | **CPU 활용도**    | 낮음               | 높음                    |
 | **메모리 사용량** | 적음               | 많음                    |
 | **응답성**        | UI 지연 최소화     | 서버 처리량 증가        |
+
+## 25.01.29
+
+[(211) 유튜버 모두가 속은 Honey 사기사건](https://www.youtube.com/watch?v=EsqBuwOuXB0)
+
+- 허니 제휴 사기 사건
+- [간단하게 알아보는 허니 사기 사건 - 미스터리/공포 - 에펨코리아](https://www.fmkorea.com/7899142524)
+- [(219) Exposing the Honey Influencer Scam](https://www.youtube.com/watch?v=vc4yL3YTwWk)
+- [uBO Quick Filters list being stolen by team behind Honey browser extension (Pie Adblock extension) : uBlockOrigin](https://old.reddit.com/r/uBlockOrigin/comments/1hr6xjc/ubo_quick_filters_list_being_stolen_by_team/)
+
+- MegaLag에 따르면, Honey는 인플루언서의 제휴 링크를 클릭하면, 결제 시 Honey의 팝업과 상호작용할 때 자체 추적 링크로 교체하여 제휴 수익을 가로챔.
+- 이로 인해 Honey가 판매에 대한 크레딧을 받게 되며, 이는 유튜버나 웹사이트가 아닌 Honey가 이익을 얻는 결과를 초래함.
+- 애드온이 제휴 링크를 교체하여 수익을 훔치는 것으로 밝혀졌으며, 코드도 훔친다는 의혹이 있음.
