--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -301,3 +301,22 @@ Chat GPT 한테 질문.
 - MegaLag에 따르면, Honey는 인플루언서의 제휴 링크를 클릭하면, 결제 시 Honey의 팝업과 상호작용할 때 자체 추적 링크로 교체하여 제휴 수익을 가로챔.
 - 이로 인해 Honey가 판매에 대한 크레딧을 받게 되며, 이는 유튜버나 웹사이트가 아닌 Honey가 이익을 얻는 결과를 초래함.
 - 애드온이 제휴 링크를 교체하여 수익을 훔치는 것으로 밝혀졌으며, 코드도 훔친다는 의혹이 있음.
+
+![image_2025-01-29-19-33-14](img/image_2025-01-29-19-33-14.png)
+
+    비유하자면, 적립 받아야할 주체가 있는데, 이걸 알바가 빼돌려서 자기껄로 적립하는 것과 똑같음
+
+    어떤 식이냐면
+
+    쿠폰이나 리워드를 제공한다면서 이거 할래? 라고 알림이 뜨는데
+
+    이걸 누르는 순간 수수료를 받는 주체가 저 Honey로 바뀌게 됨
+
+    쿠폰이나 최저가를 찾아주지도 못하고 다른 혜택을 못 받는다고 해도
+
+    자기들을 통해 이 매출이 발생했다고 조작함
+
+    나는 인플루언서 팬심 겸 혜택도 받을 겸 해당 링크를 통해 물건을 구매했는데
+
+    정작, 이 행동으로 인한 수익은 엉뚱한 놈이 채간거라는 얘기
+
