--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -320,3 +320,20 @@ Chat GPT 한테 질문.
 
     정작, 이 행동으로 인한 수익은 엉뚱한 놈이 채간거라는 얘기
 
+## 25.02.06
+
+**비동기 상호작용**
+
+- 트릭컬 pvp 등등
+- [비동기 파티플레이와 PvP가 매력, 트라하 인피니티 - 에누리 쇼핑지식 뉴스](https://m.enuri.com/knowcom/detail.jsp?kbno=2279615&bbsname=news)
+- [도대체 pvp를 왜 비동기로 만들었는지 이해가 안가네 - 대항해시대 오리진 마이너 갤러리](https://gall.dcinside.com/mgallery/board/view/?id=bigtimeofnavigation&no=7018)
+
+    그냥 유저스펙의 컴까기면 상대랑 싸우는게 아니잖아 ㅋㅋㅋㅋㅋㅋㅋ 턴제라도 동일스펙 상대랑은 전략싸움으로 가르는 재미를 줄 수 있고 뜻밖의 전략으로 이겨버리거나 하는 등등 훨신 재밌고 깊은 전투를 만들 수 있었을텐데 턴제면 턴제답게 전략쪽으로 재미를 추구할 수 있는데 왜 그런거지
+
+**비대칭 상호작용**
+
+- [비대칭 PvP - 나무위키](https://namu.wiki/w/%EB%B9%84%EB%8C%80%EC%B9%AD%20PvP)
+
+    각 팀이 동등한 조건으로 시작하는 일반적인 PvP 장르와 달리, 다수/약자 플레이어 팀[1]이 소수/강자 플레이어[2]와 대결하는 게임이다. 일명 나쁜 녀석(Bad Guy) VS 좋은 녀석들(Good Guys) 게임
+
+
