--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -336,4 +336,34 @@ Chat GPT 한테 질문.
 
     각 팀이 동등한 조건으로 시작하는 일반적인 PvP 장르와 달리, 다수/약자 플레이어 팀[1]이 소수/강자 플레이어[2]와 대결하는 게임이다. 일명 나쁜 녀석(Bad Guy) VS 좋은 녀석들(Good Guys) 게임
 
+## 25.02.07
 
+[How I got here - Inside thoughts](https://pthorpe92.dev/intro/my-story/)
+
+- Preston Thorpe : 백엔드 시니어 프로그래머
+
+> EDIT: Wow.. I definitely wasn’t expecting this to get to the front page of HN. In light of this, and some harsh, but undoubtedly fair comments that were made(as well as some completely ignorant ones). I would like to add some clarification on a few things.
+
+    I have been an opioid addict for over 10 years, and to this day prescribed suboxone, being treated for OUD as well as recently having been cured of HEP C from years of drug abuse.
+    As an addict and someone that has seen this lifestyle, and drugs in particular claim the lives of countless friends (2 of them extremely close to me. RIP Mark Bochner, Scott Young.) 
+    I am absolutely, and forever will be ashamed of any participation I had in that lifestyle and for perpetuating the scourge of addiction.
+    I would like to apologize publicly to anyone that has been affected by this, and there is no excuse for my actions, other than the same (terrible) one I give am forced to give for all of them.
+    That I was young, ignorant, addicted, and I held absolutely no value for own life, nor lives of others.
+    I am genuinely sorry and ashamed on a level that could never be properly communicated, and I understand that although I will have to live with that for the rest of my life, many others will not get that chance.
+
+    In the system, people are very open and accepting of their fate.
+    Jokes are often made about how short someone was ‘on the street’, or bets will be placed how quickly someone will be back (always in months).
+    Everyone speaks about release as if it is temporary, like a vacation from their accepted fate of prison or death.
+    This is contagious, and when someone loses all value for their own life in acceptance of that fate, it creates a population of miserable, hopeless people with nothing to lose.
+    As stated in the original post: I did not value my own life, nor did I believe I was capable of anything more than the life I had resided to.
+
+- 십대 시절 마약 거래 범죄를 저지른 혐의로 수감됨. 그 후 출소 후 빈털터리 상태로 인생이 끝나버릴 줄 알았지만, 메인 주 (State Of Maine) 의 대학에서 교육을 받을 기회를 얻음.
+- 이 시기에 다시 개과천선 할 수 있었다고 회상함.
+
+    I enrolled in College through the University of Maine Augusta, and before classes even started, I was completely enthralled with the idea of learning how to program again (it had been 15 years since I had done some PHP/Perl + simple websites, so not a lot had left over)
+
+- 출소 이후 빈털터리 상태라 갈 곳이 없었는데, 그 시절에 지냈던 아파트 이야기가 섬뜩했음
+
+    A few years later, I left prison with $0 in my pocket (lawyers and commissary are expensive, and nobody pays you what they owe you when you come in), to a rooming house with hallways that smelled like crack-smoke and were filled with parole officers and junkies. I was left with the difficult choice of either living there and walking to a temp agency with hopes of making $10.50/hour doing manual labor (without an ID or social security card at this point), or getting on a bus to NYC to see some associates, and coming back in a week or so with $15-25k in my pocket and living in comfy luxury hotels until I could rent an apartment… I chose the latter: and obviously, was back in prison after a short 14 months of addiction and misery.
+
+    I have been incarcerated now on this sentence since May of 2017, I came in with a terrible attitude, a terrible outlook on life, and no hope for my future. I have spent almost 3 years all-together in 22-23hr solitary confinement over the years (10% of my life?), and at one point I had truly become one of the people that looked at me when I first came to prison at age 20, and asked “Is this your first bid?”, to which everyone replies “first? I”m not coming back here!”, to which there is always laughter from the older heads. Everyone says that, but everyone comes back…
