--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -367,3 +367,14 @@ Chat GPT 한테 질문.
     A few years later, I left prison with $0 in my pocket (lawyers and commissary are expensive, and nobody pays you what they owe you when you come in), to a rooming house with hallways that smelled like crack-smoke and were filled with parole officers and junkies. I was left with the difficult choice of either living there and walking to a temp agency with hopes of making $10.50/hour doing manual labor (without an ID or social security card at this point), or getting on a bus to NYC to see some associates, and coming back in a week or so with $15-25k in my pocket and living in comfy luxury hotels until I could rent an apartment… I chose the latter: and obviously, was back in prison after a short 14 months of addiction and misery.
 
     I have been incarcerated now on this sentence since May of 2017, I came in with a terrible attitude, a terrible outlook on life, and no hope for my future. I have spent almost 3 years all-together in 22-23hr solitary confinement over the years (10% of my life?), and at one point I had truly become one of the people that looked at me when I first came to prison at age 20, and asked “Is this your first bid?”, to which everyone replies “first? I”m not coming back here!”, to which there is always laughter from the older heads. Everyone says that, but everyone comes back…
+
+---
+
+[1인 여성 개발팀으로 2백만명 사용자 달성하기  GeekNews](https://news.hada.io/topic?id=18932)
+
+- [The StoryGraph  Because life's too short for a book you're not in the mood for](https://www.thestorygraph.com/)
+
+> Nadia Odunayo는 The StoryGraph의 창립자이자 CEO로, 이 앱은 사용자가 독서를 추적하고 기분과 선호하는 주제에 따라 다음에 읽을 책을 선택할 수 있도록 도움을 줌. 그녀는 Pivotal Labs에서 소프트웨어 엔지니어로 일했으며, 런던의 Makers Academy에서 코딩을 배움. 여가 시간에는 춤 수업을 듣고 독서를 즐김.
+>
+> The StoryGraph는 100만 명 이상의 독서 애호가들이 모인 커뮤니티로, Nadia가 혼자서 개발한 앱임. 그녀의 이야기는 "1인 프레임워크"를 실행하는 데 필요한 끈기와 통찰력을 보여줌.
+
