--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -378,3 +378,59 @@ Chat GPT 한테 질문.
 >
 > The StoryGraph는 100만 명 이상의 독서 애호가들이 모인 커뮤니티로, Nadia가 혼자서 개발한 앱임. 그녀의 이야기는 "1인 프레임워크"를 실행하는 데 필요한 끈기와 통찰력을 보여줌.
 
+## 25.02.11
+
+[You should write without bugs](https://korshakov.com/posts/no-bugs)
+
+- 버그가 나지 않는 코드를 짜면 개발 속도가 더 빨라진다.
+
+    Over the years, when I led or joined a team, I would say, “We write code without bugs.” Everyone would laugh, but then we would actually ship without bugs. Why is that?
+
+...
+
+    If you search this topic online, you’ll find many people arguing that bugs aren’t a big deal and that you should focus on shipping features. On the other side, there are purists who want to cover 99.99% of the code with tests and verify that their code works all the time. The thing is, this isn’t a binary question — whether buggy software is acceptable or not — but rather a spectrum. Still, people prefer binary thinking, and there are very few nuanced discussions on this topic.
+
+    People on the purist side of things are usually obsessed with processes, not with making a product. Conversely, there are people with commitment issues; they want to experiment non-stop and thus have no faith in robustness. People in the middle typically don’t hold a strong opinion—they just try to be non-contrarian, unifying beings.
+
+> 순수주의자들은 보통 제품을 만드는 것보다 프로세스에 집착합니다. 반대로, 헌신에 문제가 있는 사람들은 끊임없이 실험하고 싶어 하며, 따라서 견고성에 대한 신뢰가 없습니다. 중간에 있는 사람들은 보통 강한 의견을 가지지 않으며, 단지 반대하지 않고 통합하려고 노력합니다.
+
+- 꼼꼼히 테스트를 작성하거나, 단순 개발을 빠르게 하기 위해 스파게티 코드를 작성하거나
+- 어느 쪽이나 극단적으로 추구하면 문제가 생김. 프로세스에 너무 집착하면 개발 진척이 더뎌지고
+- 너무 빠르게 만들려고 하면 버그투성이가 된다.
+  - 중간의 사람들은 보통 강한 의견을 가지지 않음. 전체 의견에 동조하려 함.
+
+...
+
+    Over the years, both extremes have proven to be wrong, and the most important thing is that both tend to end up with very slow performance, high costs, low quality, and a high risk of burnout.
+
+    While the reason for the purists’ slowness is obvious, the slowness of the other side is less so. On that side, people keep shipping features and slamming them together, which quickly makes the codebase unmaintainable. How quickly? Within a few weeks, many parts can become so convoluted that you can’t isolate problematic areas to rewrite them—everything depends on everything else. Meanwhile, some “successful” experiments also turn out to be problematic: they’re neither robust nor scalable and eventually require a full rewrite, costing a lot of time and money and, more importantly, posing a risky move for the business and the team’s mental health.
+
+    You might think it’s possible to balance these two extremes: some people rapidly ship features, while others focus on making the product robust, scalable, and maintainable. In my experience, this never works for a simple reason: business people don’t usually care about the second group, and that group will feel they’re not really part of the company. You see this in big tech companies, too—nobody cares about fixing bugs because you only get rewarded for shipping new features. That’s probably why some Google apps are such a mess.
+
+    **So what’s the way out? In my opinion, the only way is to write code “without bugs.”**
+
+    A short story: I was almost kicked out of school for low performance in Russian language (even though I was excelling at programming). However, I managed to pass the exit exam and ended up as one of the best performers in the school. My “trick” during that final year was simple: I always tried to write correctly, not just when I was asked to, but all the time. After a year of subconscious improvements, I aced the exam.
+
+- 피쳐 구현 조직과 유지 보수 조직을 분리해버리면, 유지 보수를 맡은 인원들 사이에서 불만이 생김. 유지 보수 작업은 스포트라이트를 받는 일이 드물다. 자신이 중요하지 않은 일을 하고 있다고 생각하게 됨
+- 글쓴이가 생각하는 결론은... 그냥 처음부터 버그 없는 코드를 짜는 것
+
+
+    When I’m thinking about tech design decisions,
+    I think a few steps ahead but not too far, i am thinking about ergonomics of developer.
+    It may take minutes or even hours, but it’s a good investment.
+
+    Sometimes, to bootstrap a project, I’ll spend a couple of days figuring out a solid initial approach.
+    It won’t be permanent, but it’s a good starting point that I continue to refine in the same manner.
+    Let’s say you have a project: you want to check that the compiler works, that tests can be written easily, and you discard anything that will slow you down (looking at you, React Server Components).
+    Maybe you slap some CI onto it (it’s free now and often just a one-click setup).
+    Some days, I’m obsessed with reducing development complexity.
+    I have yet to see such obsession being waste of time - almost always projects started to slow down to halt and needed it anyway.
+    Instead of hacking something together, I’ll spend a bit more time making it reliable and flexible.
+    Sometimes it feels like overkill, but it’s much better than spending weeks later on a convoluted codebase that doesn’t work. 
+    I might wrap certain libraries in simpler interfaces so they can be used everywhere without adding too much complexity. 
+    Isolate code that changes every day from the one that wouldn't at all. 
+    Sorry for generic advices: it is all common knowledge, no secrets here.
+
+- 본인은 인간 공학(ergonomics) 을 항상 고려함. 프로젝트 초창기에 설계를 다듬을 때 인간 공학 관점에서 시간을 좀 더 투자하는데, 이것을 효율적인 투자라고 생각함
+- 의식적(consciousness)으로 하나 하나 다루다 보면 속도가 느려진다. 무의식(subconscious) / 근육 기억의 영역에서 자연스럽게 이어지도록 구조를 설계하는 것이 더 유연한 소프트웨어를 위한 방법임
+- 뭔가를 학습(study)에 사용하는 시간을 최소화 해야함. 학습은 의식적인 것(conscious). 조금만 보더라도 자연스럽게 개념과 경험이 이어진다면 무의식의 영역에서 깨닫게 할 수 있음(subconscious)
