--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -434,3 +434,49 @@ Chat GPT 한테 질문.
 - 본인은 인간 공학(ergonomics) 을 항상 고려함. 프로젝트 초창기에 설계를 다듬을 때 인간 공학 관점에서 시간을 좀 더 투자하는데, 이것을 효율적인 투자라고 생각함
 - 의식적(consciousness)으로 하나 하나 다루다 보면 속도가 느려진다. 무의식(subconscious) / 근육 기억의 영역에서 자연스럽게 이어지도록 구조를 설계하는 것이 더 유연한 소프트웨어를 위한 방법임
 - 뭔가를 학습(study)에 사용하는 시간을 최소화 해야함. 학습은 의식적인 것(conscious). 조금만 보더라도 자연스럽게 개념과 경험이 이어진다면 무의식의 영역에서 깨닫게 할 수 있음(subconscious)
+
+## 25.02.14
+
+**멀티 코어 기준 CPU 사용량 측정 방식 및 Windows에서 CPU 계측 값 종류**
+
+by ChatGPT
+
+- **1. 멀티 코어 기준 CPU 사용량 측정 방식**
+
+| 항목                           | 설명                                                                                                   |
+| --------------------------     | ----------------------------------------------------------                                             |
+| **전체 CPU 사용률**            | 모든 논리 코어의 CPU 사용률을 합산하여 전체 사용률을 계산 (각 코어의 사용률을 모두 더함).              |
+| **개별 코어 사용률**           | 각 논리 코어의 사용률을 개별적으로 측정 (예: 코어 1, 코어 2, 코어 3...).                               |
+| **논리 프로세서**              | 멀티 코어 시스템에서 각 코어는 하나의 논리 프로세서로 처리됨. 각 프로세서에 대한 독립적인 사용률 측정. |
+
+- **2. Windows에서 CPU 계측 값 종류**
+
+| 계측 값                                   | 설명                                                        |
+| ----------------------------------        | ----------------------------------------------------------  |
+| **Processor(_Total)\ % Processor Time**  | 전체 CPU 사용률을 측정. 모든 코어의 평균 CPU 사용률.        |
+| **Processor(_Total)\% User Time**        | 사용자 모드에서 실행되는 프로세스의 CPU 사용률.             |
+| **Processor(_Total)\% Privileged Time**  | 커널 모드에서 실행되는 프로세스의 CPU 사용률.               |
+| **Processor(<CoreX>)\% Processor Time**  | 특정 코어의 CPU 사용률을 측정 (X는 코어 번호).              |
+| **Processor(<CoreX>)\% User Time**       | 특정 코어에서 실행되는 사용자 모드 프로세스의 CPU 사용률.   |
+| **Processor(<CoreX>)\% Privileged Time** | 특정 코어에서 실행되는 커널 모드 프로세스의 CPU 사용률.     |
+| **Processor(_Total)\% Idle Time**        | CPU가 유휴 상태에 있을 때의 시간 비율 (사용되지 않는 시간). |
+| **Processor(_Total)\% Interrupt Time**   | 인터럽트 처리에 소비된 CPU 시간 비율.                       |
+| **Processor(_Total)\% DPC Time**         | Deferred Procedure Call(DPC)에서 소비된 CPU 시간 비율.      |
+
+- Processor Time = User Time(Application) + Privileged Time (Kernel)
+
+- **3. 기타 계측 값**
+
+| 계측 값                                   | 설명                                                            |
+| ----------------------------------        | ----------------------------------------------------------      |
+| **\System\Processor Queue Length**        | CPU가 처리할 준비가 된 작업 큐의 길이를 측정.                   |
+| **\Processor(_Total)\% Hypervisor Time**  | 하이퍼바이저에서 처리된 CPU 시간 비율 (가상화 환경에서만 유효). |
+| **\Processor(<CoreX>)\% Hypervisor Time** | 특정 코어에서 하이퍼바이저가 차지하는 CPU 시간 비율.            |
+
+---
+
+in powerShell
+
+`Get-Counter '\Processor(_Total)\% Idle Time', '\Processor(_Total)\% Processor Time', '\Processor(_Total)\% Privileged Time', '\Processor(_Total)\% User Time', '\Processor(_Total)\% Interrupt Time'`
+
+^ 이걸로 측정 가능
