--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -386,7 +386,7 @@ Chat GPT 한테 질문.
 
     Over the years, when I led or joined a team, I would say, “We write code without bugs.” Everyone would laugh, but then we would actually ship without bugs. Why is that?
 
-...
+    ...
 
     If you search this topic online, you’ll find many people arguing that bugs aren’t a big deal and that you should focus on shipping features. On the other side, there are purists who want to cover 99.99% of the code with tests and verify that their code works all the time. The thing is, this isn’t a binary question — whether buggy software is acceptable or not — but rather a spectrum. Still, people prefer binary thinking, and there are very few nuanced discussions on this topic.
 
@@ -399,7 +399,7 @@ Chat GPT 한테 질문.
 - 너무 빠르게 만들려고 하면 버그투성이가 된다.
   - 중간의 사람들은 보통 강한 의견을 가지지 않음. 전체 의견에 동조하려 함.
 
-...
+    ...
 
     Over the years, both extremes have proven to be wrong, and the most important thing is that both tend to end up with very slow performance, high costs, low quality, and a high risk of burnout.
 
@@ -480,3 +480,219 @@ in powerShell
 `Get-Counter '\Processor(_Total)\% Idle Time', '\Processor(_Total)\% Processor Time', '\Processor(_Total)\% Privileged Time', '\Processor(_Total)\% User Time', '\Processor(_Total)\% Interrupt Time'`
 
 ^ 이걸로 측정 가능
+
+## 25.02.17
+
+[(281) The Aging Programmer - Kate Gregory - NDC TechTown 2024 - YouTube](https://www.youtube.com/watch?v=mVWQQeSOD0M)
+
+- [나이 들어가는 프로그래머 - 발표영상 요약  GeekNews](https://news.hada.io/topic?id=19034)
+- 시력 등의 건강 / 직장 내 에서의 환경과 대우의 변화 등등 에 관한 내용
+
+**야간 운전**
+
+    50대에 접어들면 야간 운전 문제가 생길 수 있음
+        TV 광고에 나오는 노란색 선글라스 등은 효과가 없으니 구입하지 않는 것이 좋음
+
+    야간 시야 문제 중 하나인 백내장(cataract)은 정기적인 시력 검사를 통해 조기 발견 가능하며, 수술로 개선될 수 있음
+        또한 야간 시야 문제의 원인은 다양하며 백내장이 아닌 경우도 많음
+
+    주요 문제는 대비 변화로, 어두운 길을 운전하다가 밝은 화면을 보면 시야가 흐려질 수 있음
+        차량 선택 시 큰 화면 대신 조작이 쉬운 물리적 버튼이나 슬라이더가 있는 차량을 고려하는 것이 좋음
+        화면에서 번지는 빛이나 반사로 인해 시야가 방해받을 수 있음
+
+    안경, 차량의 유리창, 헤드라이트를 깨끗하게 유지하는 것이 중요함
+        시력에 어려움이 있을수록 먼지와 얼룩의 영향이 커짐
+        나이가 들수록 청결에 더 신경을 쓰는 이유는 이러한 문제를 줄이기 위함임
+
+    비타민 A가 풍부한 음식을 섭취하면 시력 유지와 개선에 긍정적인 영향을 줌
+        당근, 빨간 피망, 토마토와 같은 채소 및 짙은 녹색 채소는 야간 시야와 대비 문제를 개선하는 데 도움을 줄 수 있음
+
+        야간 운전을 피하기 위해 도보로 이동하거나 대중교통을 이용할 수 있는 거리에 거주하는 것도 한 가지 방법임
+    이러한 변화는 긴 시간 동안 신중하게 계획하여 스트레스 없이 적응하는 것이 바람직함
+        갑작스러운 상황에서 비합리적인 결정을 내리기보다는 장기적인 계획이 필요함
+
+**운동은 신체와 정신을 건강하게 함**
+
+    난 그냥 운동 안하고도 건강하기를 바랬지만, 안타깝게도 운동은 실제로 좋음
+    단순히 활동적인 생활방식(도보 이동, 카약 등 취미)만으로는 충분하지 않을 수 있음
+    건강한 몸을 유지하기 위해 의도적으로 반복적인 운동을 해야 함
+
+        반복적인 움직임은 통증을 줄이고 유연성을 향상시킴
+
+            “움직임은 윤활제Motion is lotion 
+
+            - 히포크라테스hippocrates
+
+        라는 표현처럼, 꾸준히 움직이는 것이 통증 완화와 체력 증진에 도움을 줌
+        노화와 함께 몸을 굽히거나 높은 곳에 손을 뻗는 기본적인 능력이 감소하며, 운동을 통해 이를 유지 가능함
+
+    면역 체계의 많은 부분이 근육에서 작동하며, 운동을 통해 면역력이 강화됨
+
+        운동은 기분을 개선하고, 학습 능력을 높이며, 건강에 긍정적인 영향을 미침
+
+        “운동할 시간이 없다고 생각하는 사람들은, 결국 언젠가는 병을 앓을 시간을 마련하게 될 것” 
+
+        — 에드워드 스탠리(edward stanley, 1826–1893)
+
+**다른 사람들(Other People)의 인식**
+
+    설문 조사에서 "연령 차별"에 대해 물어 봤는데 실제로 차별이 있음
+        "내가 배우지 못할거라 가정함" : 새로운 기술에 대해 학습 여부를 묻지 않고, 배우고 싶다는 의사가 있다고도 생각하지 않음
+        "유능하다면 지금쯤 관리자가 되었어야 한다"는 고정관념으로 인해 기술적 역량이 평가절하됨
+            비관리자인 상태가 브랜드에 부정적 영향을 준다는 편견이 있음
+        이메일 및 음성 통화로 진행된 채용 과정이 비디오 인터뷰로 전환되면서 기회가 사라지기도 함
+            이는 외모, 특히 머리 색 등 연령과 관련된 편견에 기인
+        "회사 문화에 맞지 않을것 같아요":
+
+            이 표현은 종종 나이가 많다는 이유로 지원자를 배제하기 위한 명분으로 사용됨
+            이러한 연령 차별은 고령자의 전문성과 경험이 간과되는 문제를 초래함
+
+    남성과 여성 모두 노화에 따른 어려움을 겪지만, 여성에게 더 큰 영향을 미침
+        남성은 가끔 "경험이 풍부한" 또는 "존경받는" 이미지를 얻는 반면, 여성은 거의 해당되지 않음
+
+    소규모 회사에서는 개별적으로 평가될 가능성이 높지만, 대규모 회사에서는 연령에 따른 고정관념에 더 쉽게 묶임
+        그러나 대규모 회사는 기술적 경력 개발을 위한 "기술적 승진 제도(Ladder)"를 제공할 수도 있음
+        그래서 사람들이 종종 컨설팅으로 많이 옮겨감
+            내부 직원으로는 "63세인 당신에게 왜 교육을 제공해야 하나?"라는 편견에 직면할 수 있음
+            외부 컨설턴트로 활동하면 "63세라면 정말 많은 것을 알겠군요!"라는 긍정적인 인식을 받을 가능성이 높음
+
+**만약 당신이 "Other People" 이라면**
+
+    예를 들어 당신이 ‘나이 든 사람들은 배울 수 없다’, ‘나이 든 사람들은 회사 문화와 어울리지 않는다’거나, ‘소프트웨어 개발 과정에서 4층 계단쯤은 뛰어오를 수 있어야 한다’고 생각하는 사람이라면?
+    그런 생각이 못되고 잘못되었다고 굳이 말하고 싶지는 않음
+
+    대신, 그게 여러분에게 어떤 결과를 가져다줄지를 말씀드리고 싶음
+    만약 여러분이 ‘나이 드는 건 끔찍해’라고 믿는다면, 실제로 끔찍한 노년을 맞이하게 될 것
+        그리고 그건 단순히 기분이 우울하고 외로워진다는 차원만이 아님
+
+    나이든 사람들에 대한 당신의 태도가, 당신의 나이에 영향을 미침
+        노화에 대해 부정적 고정관념을 가진 사람은 심장마비나 뇌졸중의 위험이 더 높으며, 입원 가능성도 50% 증가
+        노화에 대한 긍정적 관점이 스트레스와 고통을 줄이고 더 건강한 노년을 보장
+
+    "나는 할 수 없다"는 태도는 삶의 범위를 좁히며, 부정적인 노년을 초래함
+        반대로, "새로운 방법을 배우거나 적응할 수 있다"는 사고방식은 긍정적이고 활기찬 노년을 만듦
+        기여할 수 있는 역량이 여전히 많다고 믿는 태도가 중요
+
+**단기 기억과 작업 메모리(Short term memory, working set)**
+
+    단순한 건망증(예: 왜 여기에 왔는지 잊는 경우)은 치매의 신호가 아님
+    빈번한 건망증의 원인은 물리적 또는 환경적 요인일 수 있음
+        시각적 정보 부족: 작성한 목록이 읽기 어렵거나 잊어버림
+        청각적 정보 부족: 요청 내용을 제대로 듣지 못하고 추측하는 경우
+        수면 부족: 수면이 부족하면 기억력과 집중력 저하 발생
+
+    해결 방법은 습관과 루틴 형성:
+        모든 것에 대해서 지정된 위치를 만들고 거기에다 두는 물리적인 부분 부터 시작
+        알람, 일정 관리 앱, 스크립트 등 기술을 활용할 것
+
+    체크리스트와 프로세스 만들기
+        복잡한 절차 대신 단순한 방식으로 작업을 처리하면 실수를 줄이고 부담을 완화 가능
+            예: 27단계의 복잡한 절차 대신 간소화된 프로세스를 사용하여 중간에 방해받아도 쉽게 재개 가능
+
+    멀티태스킹에 너무 의존하지 말 것
+        나이에 따라 멀티태스킹에서 단일 작업에 집중하는 방식으로 작업 스타일을 조정해야 할 필요가 있음
+        나도 한때는 멀티태스킹(예: 컨퍼런스 청취 중 이메일 정리, 소셜 미디어 확인)이 효과적이었음
+            대화 내용을 듣다가 중요한 시점에만 화면을 확인하며 작업을 병행
+        그러나 멀티태스킹은 중요한 정보를 놓치게 만들 가능성이 높음
+            예: "누가 모듈 얘기했지?"처럼 정보를 놓쳐 다시 확인해야 하는 상황 발생
+        현재는 한 가지 작업에 완전히 집중하는 방법으로 전환
+            컨퍼런스 영상을 빠른 속도로 재생하여 모든 주의를 기울이는 방식 채택
+            화면에 표시된 단서(슬라이드 내용, 코드 등)를 함께 보며 더 깊이 이해
+
+        멀티태스킹을 줄이고 집중력을 높이는 습관이 작업 효율성을 향상시킴
+        영상을 빠른 재생 속도로 시청하면 집중력을 유지하면서도 시간을 절약 가능
+            예: 1.5배속으로 시청하면 1시간짜리 강연을 더 짧은 시간 내에 완료
+
+        집중력을 완전히 투자하여 멀티태스킹을 피하는 방식이 효율적인 학습에 도움이 됨
+
+    개인의 뇌 구조와 기능의 다양성을 이해하고 수용
+
+        ADHD나 자폐 스펙트럼을 가진 사람들은 독창적인 대처 기술을 통해 어려움을 극복
+            뇌가 즉각적인 도움을 주지 않을 때도 작업을 완료하는 방법을 알고 있음
+        이러한 특성은 일부 사람들에게 익숙하지 않을 수 있지만, 이러한 기술은 자신에게도 유익하며 적용 가능
+        인터넷 검색, 친구들과의 대화를 통해 다양한 대처 기술을 발견 가능
+            기억력 부족이나 여러 단계의 작업을 중간에 멈추는 문제를 해결하기 위한 도구와 팁이 다수 존재
+
+    뇌 훈련 게임이 도움이 될까?
+        색깔 맞추기, 단어 찾기 등은 게임 자체의 실력을 높이는 데는 도움되지만, 전반적인 인지 능력이나 처리 속도를 향상시키지는 않음
+        광고에서 주장하는 효과와 실제 효과가 다름
+
+    즐겁게 읽는 독서나 흥미로운 학습은 인지 능력과 처리 능력에 실질적인 도움을 줌
+
+        예: 그림 그리기 배우기, 스탠드업 패들보드 배우기, 소설 읽기 등
+        독서는 창의력과 인지 능력을 자극하며, 스트레스를 줄이고 삶의 질을 향상
+
+**계속해서 등장하는 "새로운 것(New Stuff)" 따라잡기**
+
+    "또 다른 프로그래밍 언어를 배워야 해" 같은 이야기를 하자는 게 아님
+        이미 직장에서 충분히 스트레스 받고 있음
+
+    많은 사람들이 계속해서 새로운 것들을 익혀야 한다는 데 대해 불평을 함
+        그것도 꼭 필요한 이유가 있어서라기보다는, 단지 ‘8년째 이 패러다임을 쓰고 있으니 이제 다른 패러다임으로 갈 때가 됐다’ 같은 이유일 때가 많음
+
+    사실 배우려고만 하면 대부분 배울 수 있음 (그렇게 하고 싶지 않은건 다른 문제)
+
+    ‘Git 같은 건 배우고 싶지 않아’라고 느끼는 건, 사실 Git 자체가 어려워서가 아님
+        우리는 이미 어떻게 학습해야 하는지 알고, 빠르게 훑어보고 과거의 경험과 연결 지을 수 있음
+        ‘아, 이건 내가 대학 시절에 쓰던 그거랑 비슷하네?’
+
+    그럼에도, ‘나는 웹 같은 건 안 다뤄. 데스크톱만 하는 사람이야, C++만 쓰는 사람이야. 그런 바보 같은 웹 기술은 필요 없어’라는 식으로 스스로를 정의해버리면, 새로운 걸 받아들이기 싫어질 수밖에 없음
+    하지만 변화 자체를 기꺼이 수용한다면, 그게 새로운 언어든, 새로운 프레임워크든, 새로운 패러다임이나 툴이든, 혹은 완전히 다른 사고방식이든, 훨씬 유연해질 수 있음
+
+        같은 도구일지라도 생각하는 새로운 방법이 있을 수 있음
+
+    자신의 업무 정체성(Identity)을 사용하는 도구가 아니라, 달성한 성과와 해결한 문제로 정의해야 함
+
+**기분(Moods)**
+
+    많은 사람들이 자신이 늙으면 짜증을 잘 내고, 조급해지고, 냉소적이고, 집중력이 약해질까 봐 걱정함
+    보통은 ‘나는 저 사람처럼 되고 싶지 않아’ 같은 구체적인 모델이 있기도 함
+    하지만 치매와 마찬가지로, 이런 성격 변화도 불가피한 건 아님
+
+    20대에 다정하고 관대한 사람이라면, 대체로 80대에도 여전히 그렇게 지낼 가능성이 높음
+    다만 한 가지 전제조건이 있음
+        생계에 대한 걱정이 없고, 필요한 게 충족될 때 우리는 쉽게 따뜻하고 너그럽고 친절할 수 있음
+
+    삶의 기본 안정성이 부족할 경우, 긍정적인 태도를 유지하거나 다른 사람에게 관대해지기가 어려움
+        예: 생계 유지에 대한 불안, 집을 잃을 걱정, 지지해 줄 사람들의 부재 등은 부정적인 태도를 유발할 수 있음
+        이런 환경에서 계속 환하게 웃고 친절하기는 정말 어렵고, 사람은 당연히 짜증과 우울감에 빠지게 됨
+
+    결국, 젊을 때부터 안정적인 노년을 위한 계획을 세우고 편안한 노후를 준비해둬야, 그 시기에 여유롭게 다른 이들에게 따뜻함과 관용을 베풀 수 있음
+    지금 친절하지 않다면, 나이가 든다고 해서 마법처럼 "친절한 사람"이 되는 것은 아님
+        친절해지고 싶다면 지금부터 실천하면 됨; 특별한 면허가 필요하지 않음
+
+**수면(Sleep)**
+
+    수면은 최고의 디버거이며, 신체가 상처를 치유하고 회복하는 시간
+        나이가 들면서 수면 필요량이 증가하거나 감소하는 것은 정상적인 현상
+
+    더 많은 수면이 필요한 사람은 게으른 것이 아니며, 더 적게 자는 사람이 특별히 미덕을 가진 것도 아님
+        수면 시간은 개인마다 다르며, 자신의 필요에 맞는 만큼 자는 것이 중요
+        예: 88세인 내 어머니는 하루 일찍 일어나기 위해 알람을 설정하지만, 더 늦게 자는 사람이 게으른 것은 아님
+
+    좋은 수면은 신체적, 정신적 젊음을 유지하는 데 기여
+        연구에 따르면, 한 달간 양질의 수면은 6년 젊어진 기분을 느끼게 하고, 단 이틀의 수면 부족은 4.5년 더 나이 든 것 같은 피로감을 줌
+
+**상실(Loss)**
+
+    상실은 삶의 일부이며, 누구도 피할 수 없음
+        예: 장례식 참석, 회사 폐업, 친구와 멀어지고/바꾸거나/죽기도 함
+        어떤 상실은 예상 가능하고, 어떤 상실은 갑작스럽게 찾아옴
+
+    일상에서도 작은 상실을 경험:
+        좋아하던 아이스크림이 단종됨
+        신체적 한계로 더 이상 좋아하던 활동(예: 등산, 스키)을 할 수 없게 됨
+
+    작은 상실도 축적되며 감정적으로 영향을 줄 수 있음
+    상실을 치유하는 유일한 방법은 새로운 것을 얻는 것임 (The only cure for loss is gain)
+
+    "Well something's lost, but something's gained In living every day" — Joni Mitchell, Both Sides Now
+    “뭔가는 잃게 되고 또 뭔가는 얻게 되지, 매일을 살아가는 동안에”
+
+    조니 미첼이 20대에 쓴 노랫말인데 혹자는 20대가 무슨 인생경험을 알겠어?라고도 함
+        그녀는 20대에 캐나다 중부에서 대도시 토론토로 이주했다가, 아이를 낳고, 위탁 가정에서 그 아이를 데려오기 위해 누군가와 결혼도 함. 그가 아이에 관심이 없다는 사실을 알고 이혼하고 다시 입양을 보냄. 이후 뉴욕을 거쳐 캘리포니아로 이주한 뒤에야 이 곡을 썼음
+        생각보다 인생의 ‘잃음과 얻음’을 잘 알고 있었던 것. 그로부터 훨씬 나중에는 뇌동맥류를 겪어서 걷거나 말하는 능력을 잃을 뻔했지만, 다시 무대에 서서 이 노랫말을 직접 부를 정도로 회복해냄
+
+    하지만 중요한 것은 이거임:
+        상실은 저절로 우리에게 찾아오지만, 무언가를 얻는 건 결국 우리가 직접 해내야 함
+
