--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -696,3 +696,18 @@ in powerShell
     하지만 중요한 것은 이거임:
         상실은 저절로 우리에게 찾아오지만, 무언가를 얻는 건 결국 우리가 직접 해내야 함
 
+## 25.02.20
+
+**인프라 테스트에서 에러 발생하는 케이스**
+
+- failover 이후 Lazy Loading: 장애 상황이 발생한 서비스 프로세스는 종료되고, 예비 프로세스가 이어서 대응
+  - 이때 예비 프로세스가 기존 접속했던 사용자들의 요청을 이어서 처리하게 되는데, LazyLoading 방식을 사용하고 있었다면 이 상황에 취약함
+  - 기존 접속 사용자들의 요청 처리를 해야하는데, 이전 서비스는 LazyLoading 을 전부 완료하고 캐시 데이터를 사용하고 있었다면 장애 이후 새로 동작하는 프로세스는 아직 캐시가 비워져 있어서 LazyLoading 절차를 처음부터 해야하기 때문
+  - DB 쿼리 등 LazyLoading 부하가 순간적으로 스파이크 튈 수 있다.
+- failover 이후 일부 서비스 기능 이상: 메모리에 저장하는 자원들이 있었음
+  - 만나봤던 케이스는 사용자들의 접속 여부를 메모리에만 저장하는데 페일오버 이후 휘발되어버린다.
+  - 유저의 접속 상태를 집계하는 방식이 -> 첫 접속시 set, 접속해제 시 offline 상태로 set 하고 있었던 상태
+    - 하트비트 방식으로 접속 중에는 주기적으로 online 상태를 갱신하는 방식이 견고했을 것 같다.
+    - 우선을 빠른 대응을 위해 유저가 요청을 보낼 때마다 online 상태를 set 하는 걸로 대응. 이 방식의 허점은 failover 이후 유저가 첫 요청을 보내기 전까지 offline 상태로 인식함. 유저가 아무것도 안 한다면 서비스가 잘못 인식할 수도 있는 것.
+
+
